next: shapes are a problem on browswers. how do i get rid of them....

--- a/src/main_school.html
+++ b/src/main_school.html
@@ -70,6 +70,8 @@ window.addEvent('domready', function()
         
 	mApplication.mNetwork.mSocket.on('news', function (data)
         {
+		mApplication.mTimeSinceLastServerTick = 0;
+
                 s = data.split(',');
 
                 byteBuffer = new ByteBuffer(s);
