--- a/src/main_school.html
+++ b/src/main_school.html
@@ -143,7 +143,7 @@ window.addEvent('domready', function()
 				if (mIntervalCount > 25)
 				{
 					//game loop stopped so let's clear interval and start a new one.	
-
+					mApplication.log('gameloop stopped');
 					//clear it
 					clearInterval(mInterval);
 
