bug is no game on client in some fashion when you hit join game.....

--- a/src/main_school.html
+++ b/src/main_school.html
@@ -110,7 +110,14 @@ window.addEvent('domready', function()
 	
                 if (type == -103)
                 {
-			mApplication.mGame.addShape(byteBuffer);
+			if (mApplication.mGame)
+			{
+				mApplication.mGame.addShape(byteBuffer);
+			}
+			else
+			{
+				mApplication.log('no game yet on client!');
+			}
                 }
 	
                 if (type == -104)
