gamepartido running next: get question in it.

--- a/src/main_localhost.html
+++ b/src/main_localhost.html
@@ -20,6 +20,7 @@
 <script src="http://127.0.0.1/breslin/clientside/application/states/application_play.php"></script>
 <script src="http://127.0.0.1/breslin/clientside/bytebuffer/byte_buffer.php"></script>
 <script src="http://127.0.0.1/breslin/clientside/game/game.php"></script>
+<script src="http://127.0.0.1/breslin/clientside/game/game_partido.php"></script>
 <script src="http://127.0.0.1/breslin/clientside/game/states/game_global.php"></script>
 <script src="http://127.0.0.1/breslin/clientside/game/states/game_initialize.php"></script>
 <script src="http://127.0.0.1/breslin/clientside/game/states/game_pause.php"></script>
