--- a/src/main_localhost.html
+++ b/src/main_localhost.html
@@ -25,6 +25,7 @@
 <script src="http://127.0.0.1/breslin/clientside/game/states/game_initialize.php"></script>
 <script src="http://127.0.0.1/breslin/clientside/game/states/game_pause.php"></script>
 <script src="http://127.0.0.1/breslin/clientside/game/states/game_play.php"></script>
+<script src="http://127.0.0.1/breslin/clientside/game/states/game_partido_play.php"></script>
 <script src="http://127.0.0.1/breslin/clientside/game/states/game_battle.php"></script>
 <script src="http://127.0.0.1/breslin/clientside/shape/shape.php"></script>
 <script src="http://127.0.0.1/breslin/math/vector_3d.php"></script>
