adding apppartido to makes

--- a/src/main_localhost.html
+++ b/src/main_localhost.html
@@ -10,6 +10,7 @@
 <script src="/socket.io/socket.io.js"></script>
 <script src="http://127.0.0.1/mootools/mootools-core-1.4.5-full-compat.js"></script>
 <script src="http://127.0.0.1/breslin/clientside/application/application_breslin.php"></script>
+<script src="http://127.0.0.1/breslin/clientside/application/application_partido.php"></script>
 <script src="http://127.0.0.1/breslin/clientside/network/network.php"></script>
 <script src="http://127.0.0.1/breslin/breslin/statemachine/state.php"></script>
 <script src="http://127.0.0.1/breslin/statemachine/state_machine.php"></script>
