using applicationPartido in c++ and php

--- a/src/main_localhost.html
+++ b/src/main_localhost.html
@@ -62,7 +62,7 @@ window.addEvent('domready', function()
         mMiddleOfViewPort.y =  0;
         mMiddleOfViewPort.z =  mSize.y / 2;
 
-        mApplication = new ApplicationBreslin('127.0.0.1','10000');
+        mApplication = new ApplicationPartido('127.0.0.1','10000');
        	
         //input
         document.addEvent("keydown", mApplication.keyDown);
