works. next: no battleStart in php

--- a/src/main_localhost.html
+++ b/src/main_localhost.html
@@ -18,6 +18,7 @@
 <script src="http://127.0.0.1/breslin/clientside/application/states/application_initialize.php"></script>
 <script src="http://127.0.0.1/breslin/clientside/application/states/application_login.php"></script>
 <script src="http://127.0.0.1/breslin/clientside/application/states/application_main.php"></script>
+<script src="http://127.0.0.1/breslin/clientside/application/states/application_main_partido.php"></script>
 <script src="http://127.0.0.1/breslin/clientside/application/states/application_play.php"></script>
 <script src="http://127.0.0.1/breslin/clientside/bytebuffer/byte_buffer.php"></script>
 <script src="http://127.0.0.1/breslin/clientside/game/game.php"></script>
@@ -63,6 +64,8 @@ window.addEvent('domready', function()
         mMiddleOfViewPort.z =  mSize.y / 2;
 
         mApplication = new ApplicationPartido('127.0.0.1','10000');
+	mApplication.createStates();
+	mApplication.setStates();
        	
         //input
         document.addEvent("keydown", mApplication.keyDown);
