took out comments

--- a/src/main_localhost.html
+++ b/src/main_localhost.html
@@ -84,7 +84,7 @@ window.addEvent('domready', function()
                 byteBuffer = new ByteBuffer(s);
 
                 type = byteBuffer.readByte();
-		mApplication.log('type:' + type);
+		//mApplication.log('type:' + type);
 
 		//mMessageConnected
   		if (type == -90)
