--- a/src/main_115.html
+++ b/src/main_115.html
@@ -1,15 +1,11 @@
-<?php
-
-?>
-
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
-<html>
 <head>
 <title>ABC AND YOU</title>
 
 <script src="/socket.io/socket.io.js"></script>
 <script src="http://192.168.1.115/mootools/mootools-core-1.4.5-full-compat.js"></script>
 <script src="http://192.168.1.115/breslin/clientside/application/application_breslin.php"></script>
+<script src="http://192.168.1.115/breslin/clientside/application/application_partido.php"></script>
 <script src="http://192.168.1.115/breslin/clientside/network/network.php"></script>
 <script src="http://192.168.1.115/breslin/breslin/statemachine/state.php"></script>
 <script src="http://192.168.1.115/breslin/statemachine/state_machine.php"></script>
@@ -17,13 +13,17 @@
 <script src="http://192.168.1.115/breslin/clientside/application/states/application_initialize.php"></script>
 <script src="http://192.168.1.115/breslin/clientside/application/states/application_login.php"></script>
 <script src="http://192.168.1.115/breslin/clientside/application/states/application_main.php"></script>
+<script src="http://192.168.1.115/breslin/clientside/application/states/application_main_partido.php"></script>
 <script src="http://192.168.1.115/breslin/clientside/application/states/application_play.php"></script>
 <script src="http://192.168.1.115/breslin/clientside/bytebuffer/byte_buffer.php"></script>
 <script src="http://192.168.1.115/breslin/clientside/game/game.php"></script>
+<script src="http://192.168.1.115/breslin/clientside/game/game_partido.php"></script>
 <script src="http://192.168.1.115/breslin/clientside/game/states/game_global.php"></script>
 <script src="http://192.168.1.115/breslin/clientside/game/states/game_initialize.php"></script>
 <script src="http://192.168.1.115/breslin/clientside/game/states/game_pause.php"></script>
 <script src="http://192.168.1.115/breslin/clientside/game/states/game_play.php"></script>
+<script src="http://192.168.1.115/breslin/clientside/game/states/game_play_partido.php"></script>
+<script src="http://192.168.1.115/breslin/clientside/game/states/game_play_partido_battle.php"></script>
 <script src="http://192.168.1.115/breslin/clientside/shape/shape.php"></script>
 <script src="http://192.168.1.115/breslin/math/vector_3d.php"></script>
 <script src="http://192.168.1.115/breslin/clientside/command/command.php"></script>
@@ -43,135 +43,7 @@
 
 <body bgcolor="grey">
 
-<script>
-
-var mApplication;
-var mSize = 0;
-var mMiddleOfViewPort = new Vector3D();;
-
-window.addEvent('domready', function()
-{
-       	mSize = window.getSize();
-
-        //let's move control object to middle of screen
-        mMiddleOfViewPort.x =  mSize.x / 2;
-        mMiddleOfViewPort.y =  0;
-        mMiddleOfViewPort.z =  mSize.y / 2;
-
-        mApplication = new ApplicationBreslin('192.168.1.115','10000');
-       	
-        //input
-        document.addEvent("keydown", mApplication.keyDown);
-        document.addEvent("keyup", mApplication.keyUp);
-
-        //main loop
-	mIntervalCount = 0;
-        mInterval=setInterval("mApplication.processUpdate()",32)
-        
-	mApplication.mNetwork.mSocket.on('news', function (data)
-        {
-		mApplication.mTimeSinceLastServerTick = 0;
-
-                s = data.split(',');
-
-                byteBuffer = new ByteBuffer(s);
-
-                type = byteBuffer.readByte();
-
-		//mMessageConnected
-  		if (type == -90)
-                {
-                        mApplication.mConnected = true;
-                }
-
-		if (type == -109)
-		{
-                	length = byteBuffer.readByte();
-			mApplication.log('length:' + length);			
-			var string = "";
-			for (i = 0; i < length; i++)
-			{
-				string = string + byteBuffer.readByte();
-			}
-			
-
-			var option=document.createElement("option");
-			option.text=string;
-			try
-  			{
-  				// for IE earlier than version 8
-  				mApplication.mSelectMenuSchool.add(option,x.options[null]);
-  			}
-			catch (e)
-  			{
-  				mApplication.mSelectMenuSchool.add(option,null);
-  			}
-		}
-	
-                if (type == -103)
-                {
-			mApplication.mGame.addShape(byteBuffer);
-                }
-	
-                if (type == -104)
-		{
-			mApplication.mGame.removeShape(byteBuffer);
-		}
-
-		if (type == mApplication.mMessageLoggedIn)
-                {
-                        mApplication.mLoggedIn = true;
-                }
-
-                if (type == mApplication.mMessageLoggedOut)
-                {
-                        mApplication.mLoggedIn = false;
-                }
-
-                if (type == mApplication.mMessageLeaveGame)
-                {
-                        mApplication.mLeaveGame = true;
-                }
-
-                if (type == 1)
-                {
-			if (mApplication.mGame)
-			{
-				mIntervalCount++;
-		
-				//check if we stopped game loop	
-				if (mIntervalCount > 25)
-				{
-					//game loop stopped so let's clear interval and start a new one.	
-					mApplication.log('gameloop stopped');
-					//clear it
-					clearInterval(mInterval);
-
-					//set it again
-        				mInterval=setInterval("mApplication.processUpdate()",32)
-
-					mIntervalCount = 0;
-
-				}
-                        	mApplication.mGame.readServerTick(byteBuffer);
-			}
-                }
-        });
-}
-);
-
-window.onresize = function(event)
-{
-	mSize = window.getSize();	
-
-        //let's move control object to middle of screen
-        mMiddleOfViewPort.x =  mSize.x / 2;
-        mMiddleOfViewPort.y =  0;
-        mMiddleOfViewPort.z =  mSize.y / 2;
-    	//mApplication.mNetwork.mSocket.emit('send_disconnect', '');
-}
-
-</script>
+<script src="http://192.168.1.115/main.js"></script>
 
 
 </body>
