115 and localhost work and windwos ie works

--- a/src/main_115.html
+++ b/src/main_115.html
@@ -43,6 +43,10 @@
 
 <body bgcolor="grey">
 
+<script>
+mIP = '192.168.1.115';
+</script>
+
 <script src="http://192.168.1.115/main.js"></script>
 
 
