class fix: added and now using applicationPlayPartido in php. next: make that and appPlay the same structure ads c++

--- a/src/main_localhost.html
+++ b/src/main_localhost.html
@@ -15,6 +15,7 @@
 <script src="http://127.0.0.1/breslin/clientside/application/states/application_main.php"></script>
 <script src="http://127.0.0.1/breslin/clientside/application/states/application_main_partido.php"></script>
 <script src="http://127.0.0.1/breslin/clientside/application/states/application_play.php"></script>
+<script src="http://127.0.0.1/breslin/clientside/application/states/application_play_partido.php"></script>
 <script src="http://127.0.0.1/breslin/clientside/bytebuffer/byte_buffer.php"></script>
 <script src="http://127.0.0.1/breslin/clientside/game/game.php"></script>
 <script src="http://127.0.0.1/breslin/clientside/game/game_partido.php"></script>
