--- a/src/main_71.html
+++ b/src/main_71.html
@@ -15,6 +15,7 @@
 <script src="http://71.23.229.73/breslin/clientside/application/states/application_main.php"></script>
 <script src="http://71.23.229.73/breslin/clientside/application/states/application_main_partido.php"></script>
 <script src="http://71.23.229.73/breslin/clientside/application/states/application_play.php"></script>
+<script src="http://71.23.229.73/breslin/clientside/application/states/application_play_partido.php"></script>
 <script src="http://71.23.229.73/breslin/clientside/bytebuffer/byte_buffer.php"></script>
 <script src="http://71.23.229.73/breslin/clientside/game/game.php"></script>
 <script src="http://71.23.229.73/breslin/clientside/game/game_partido.php"></script>
