--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,9 @@
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
 <html>
 <head>
-<meta http-equiv="Refresh" content="0;url=/web/login/login_form.php" />
+<script type="text/javascript">
+window.location = "http://" + location.hostname + ":10001"
+</script>
 </head>
 
 <body>
