--- a/src/main_103.html
+++ b/src/main_103.html
@@ -25,6 +25,7 @@
 <script src="http://192.168.1.103/breslin/clientside/game/states/game_play.php"></script>
 <script src="http://192.168.1.103/breslin/clientside/game/states/game_play_partido.php"></script>
 <script src="http://192.168.1.103/breslin/clientside/game/states/game_play_partido_battle.php"></script>
+<script src="http://192.168.1.103/breslin/clientside/game/states/game_play_partido_correct_answer.php"></script>
 <script src="http://192.168.1.103/breslin/clientside/shape/shape.php"></script>
 <script src="http://192.168.1.103/breslin/math/vector_3d.php"></script>
 <script src="http://192.168.1.103/breslin/clientside/command/command.php"></script>
