--- a/src/main_localhost.html
+++ b/src/main_localhost.html
@@ -25,6 +25,8 @@
 <script src="http://127.0.0.1/breslin/clientside/game/states/game_play.php"></script>
 <script src="http://127.0.0.1/breslin/clientside/game/states/game_play_partido.php"></script>
 <script src="http://127.0.0.1/breslin/clientside/game/states/game_play_partido_battle.php"></script>
+<script src="http://127.0.0.1/breslin/clientside/game/states/game_play_partido_correct_answer.php"></script>
+<script src="http://127.0.0.1/breslin/clientside/game/states/game_play_partido_reset.php"></script>
 <script src="http://127.0.0.1/breslin/clientside/shape/shape.php"></script>
 <script src="http://127.0.0.1/breslin/math/vector_3d.php"></script>
 <script src="http://127.0.0.1/breslin/clientside/command/command.php"></script>
@@ -43,6 +45,7 @@
 </head>
 
 <body bgcolor="grey">
+
 <script>
 mIP = '127.0.0.1';
 </script>
