minor error on escape.

--- a/src/main_localhost.html
+++ b/src/main_localhost.html
@@ -7,8 +7,8 @@
 <script src="http://127.0.0.1/breslin/clientside/application/application_breslin.php"></script>
 <script src="http://127.0.0.1/breslin/clientside/application/application_partido.php"></script>
 <script src="http://127.0.0.1/breslin/clientside/network/network.php"></script>
-<script src="http://127.0.0.1/breslin/breslin/statemachine/state.php"></script>
-<script src="http://127.0.0.1/breslin/statemachine/state_machine.php"></script>
+<script src="http://127.0.0.1/breslin/fsm/state.php"></script>
+<script src="http://127.0.0.1/breslin/fsm/state_machine.php"></script>
 <script src="http://127.0.0.1/breslin/clientside/application/states/application_global.php"></script>
 <script src="http://127.0.0.1/breslin/clientside/application/states/application_initialize.php"></script>
 <script src="http://127.0.0.1/breslin/clientside/application/states/application_login.php"></script>
