--- a/src/main_103.html
+++ b/src/main_103.html
@@ -5,38 +5,23 @@
 <script src="/socket.io/socket.io.js"></script>
 <script src="http://192.168.1.103/mootools/mootools-core-1.4.5-full-compat.js"></script>
 <script src="http://192.168.1.103/breslin/clientside/application/application_breslin.php"></script>
-<script src="http://192.168.1.103/breslin/clientside/application/application_partido.php"></script>
+<script src="http://192.168.1.103/breslin/clientside/application/partido/application_partido.php"></script>
 <script src="http://192.168.1.103/breslin/clientside/network/network.php"></script>
-<script src="http://192.168.1.103/breslin/breslin/statemachine/state.php"></script>
-<script src="http://192.168.1.103/breslin/statemachine/state_machine.php"></script>
-<script src="http://192.168.1.103/breslin/clientside/application/states/application_global.php"></script>
-<script src="http://192.168.1.103/breslin/clientside/application/states/application_initialize.php"></script>
-<script src="http://192.168.1.103/breslin/clientside/application/states/application_login.php"></script>
-<script src="http://192.168.1.103/breslin/clientside/application/states/application_main.php"></script>
-<script src="http://192.168.1.103/breslin/clientside/application/states/application_main_partido.php"></script>
-<script src="http://192.168.1.103/breslin/clientside/application/states/application_play.php"></script>
-<script src="http://192.168.1.103/breslin/clientside/application/states/application_play_partido.php"></script>
+<script src="http://192.168.1.103/breslin/fsm/state.php"></script>
+<script src="http://192.168.1.103/breslin/fsm/state_machine.php"></script>
+<script src="http://192.168.1.103/breslin/clientside/application/states/application_states.php"></script>
+<script src="http://192.168.1.103/breslin/clientside/application/partido/states/application_partido_states.php"></script>
 <script src="http://192.168.1.103/breslin/clientside/bytebuffer/byte_buffer.php"></script>
 <script src="http://192.168.1.103/breslin/clientside/game/game.php"></script>
-<script src="http://192.168.1.103/breslin/clientside/game/game_partido.php"></script>
-<script src="http://192.168.1.103/breslin/clientside/game/states/game_global.php"></script>
-<script src="http://192.168.1.103/breslin/clientside/game/states/game_initialize.php"></script>
-<script src="http://192.168.1.103/breslin/clientside/game/states/game_pause.php"></script>
-<script src="http://192.168.1.103/breslin/clientside/game/states/game_play.php"></script>
-<script src="http://192.168.1.103/breslin/clientside/game/states/game_play_partido.php"></script>
-<script src="http://192.168.1.103/breslin/clientside/game/states/game_play_partido_battle.php"></script>
-<script src="http://192.168.1.103/breslin/clientside/game/states/game_play_partido_correct_answer.php"></script>
+<script src="http://192.168.1.103/breslin/clientside/game/partido/game_partido.php"></script>
+<script src="http://192.168.1.103/breslin/clientside/game/states/game_states.php"></script>
+<script src="http://192.168.1.103/breslin/clientside/game/partido/states/game_partido_states.php"></script>
 <script src="http://192.168.1.103/breslin/clientside/shape/shape.php"></script>
 <script src="http://192.168.1.103/breslin/math/vector_3d.php"></script>
 <script src="http://192.168.1.103/breslin/clientside/command/command.php"></script>
 <script src="http://192.168.1.103/breslin/clientside/div/div.php"></script>
-<script src="http://192.168.1.103/breslin/clientside/ability/move/ability_move.php"></script>
-<script src="http://192.168.1.103/breslin/clientside/ability/move/ability_move_state.php"></script>
-<script src="http://192.168.1.103/breslin/clientside/ability/move/global_process_tick_move.php"></script>
-<script src="http://192.168.1.103/breslin/clientside/ability/move/catchup_process_tick_move.php"></script>
-<script src="http://192.168.1.103/breslin/clientside/ability/move/normal_process_tick_move.php"></script>
-<script src="http://192.168.1.103/breslin/clientside/ability/move/normal_interpolate_tick_move.php"></script>
-<script src="http://192.168.1.103/breslin/clientside/ability/move/ability_move_state_machine.php"></script>
+<script src="http://192.168.1.103/breslin/clientside/move/move.php"></script>
+<script src="http://192.168.1.103/breslin/clientside/move/states/move_states.php"></script>
 <script src="http://192.168.1.103/breslin/clientside/animation/animation.php"></script>
 <script src="http://192.168.1.103/breslin/clientside/animation/animation_advanced.php"></script>
 
